<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    android:background="@drawable/fond_ecran_inscrip_connex_rose_noir"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="#2f282a"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />

    <TextView
        android:id="@+id/nomPageInscripton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/inscription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="35sp"
        />

    <TextView
        android:id="@+id/tvUser"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/user"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        android:background="#e8a7bf"
        />

    <TextView
        android:id="@+id/tvMdp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mdp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/Mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="#e8a7bf"
        android:textSize="24sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/validerCo"
        android:text="@string/valider"
        android:onClick="add"
        />
    </RelativeLayout>

</LinearLayout>