<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />

    <TextView
        android:id="@+id/nomPage"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/connexion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/tvUser"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/user"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/tvMdp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mdp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/Mdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="24sp"
        />

</LinearLayout>